--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,25 +1,19 @@
+[build-system]
+requires = ["poetry-core (>=2.0.0)", "poetry-dynamic-versioning (>=1.5.0,<2.0.0)"]
+build-backend = "poetry_dynamic_versioning.backend"
+
 [tool.poetry]
-name = "sensortrack"
-version = "0.0.0" # published version is managed using Git tags (see below)
-description = "Historically track sensor data from SmartThings"
-authors = ["Kenneth J. Pronovici <pronovic@ieee.org>"]
-license = "Apache-2.0"
-homepage = "https://github.com/pronovic/smartapp-sensortrack"
-repository = "https://github.com/pronovic/smartapp-sensortrack"
+requires-poetry = ">=2.0.0"
+packages = [ { include="sensortrack", from="src" } ]
 include = [
-   { path = 'Changelog', format = 'sdist' },
-   { path = 'NOTICE', format = 'sdist' },
-   { path = 'LICENSE', format = 'sdist' },
-   { path = 'README.md', format = 'sdist' },
-   { path = 'docs', format = 'sdist' },
-   { path = 'tests', format = 'sdist' },
+   { path='Changelog', format='sdist' },
+   { path='NOTICE', format='sdist' },
+   { path='LICENSE', format='sdist' },
+   { path='README.md', format='sdist' },
+   { path='docs', format='sdist' },
+   { path='tests', format='sdist' },
 ]
-packages = [ 
-   { include = "sensortrack", from = "src" },
-]
-classifiers=[
-   "Programming Language :: Python :: 3",
-   "License :: OSI Approved :: Apache Software License",
+classifiers = [
    "Operating System :: Unix",
    "Environment :: Console",
    "Environment :: No Input/Output (Daemon)",
@@ -27,49 +21,64 @@ classifiers=[
    "Natural Language :: English",
    "Topic :: Home Automation",
 ]
+version = "0.0.0"
+
+[tool.poetry.requires-plugins]
+poetry-dynamic-versioning = { version=">=1.5.0,<2.0.0", extras=["plugin"] }
 
 # Published version is managed using Git tags
 # We get either the tag (like "0.24.1") or a snapshot-type version (like "0.24.1+3.e8319c4")
-# If the plugin is not installed, then the version is always "0.0.0", taken from above
 [tool.poetry-dynamic-versioning]
 enable = true
 pattern = '^[vV](?P<base>\d+\.\d+\.\d+)'  # this extracts the version from our vX.Y.Z tag format
 format-jinja = "{% if distance == 0 and not dirty %}{{ base }}{% else %}{{ base }}+{{ distance }}.{{ commit }}{% endif %}"
 
-[tool.poetry.dependencies]
-python = ">=3.10,<4"
-fastapi = "~0, >=0.103.2"
-uvicorn = "~0, >=0.23.2"
-influxdb-client = "^1.38.0"
-python-dotenv = "^1.0.0"
-smartapp-sdk = "~0, >=0.6.8"
-jsonpath-ng = "^1.6.0"
-pytemperature = "^1.1"
-importlib-resources = "^6.1.0"
+[project]
+name = "sensortrack"
+requires-python = ">=3.10,<4"
+description = "Historically track sensor data from SmartThings"
+authors = [ { name="Kenneth J. Pronovici", email="pronovic@ieee.org" } ]
+license = "Apache-2.0"
+readme = "README.md"
+dynamic = [ "classifiers", "version" ]
+dependencies = [
+   "fastapi (>=0.103.2,<1.0.0)",
+   "uvicorn (>=0.23.2,<1.0.0)",
+   "influxdb-client (>=1.38.0,<2.0.0)",
+   "python-dotenv (>=1.0.0,<2.0.0)",
+   "smartapp-sdk (>=0.7.0,<0.8.0)",
+   "jsonpath-ng (>=1.6.0,<2.0.0)",
+   "pytemperature (>=1.1,<2.0)",
+   "importlib-resources (>=6.1.0,<7.0.0)",
+]
+
+[project.urls]
+homepage = "https://github.com/pronovic/smartapp-sensortrack"
+repository = "https://github.com/pronovic/smartapp-sensortrack"
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^8.0.2"
-pytest-testdox = "^3.1.0"
-coverage = "^7.4.4"
-pylint = "^3.0.1"
-toml = "~0, >=0.10.2"
-pre-commit = "^4.0.1"
-black = "^24.2.0"
-mypy = "^1.6.0"
-isort = "^5.12.0"
-types-PyYAML = "^6.0.12.12"
-pytest-asyncio = "~0, >=0.21.1"
-types-requests = "^2.31.0.8"
-types-Jinja2 = "^2.11.9"
-colorama = "~0, >=0.4.6"
-httpx = "~0, >=0.25.0"
-responses = "~0, >=0.23.3"
-types-influxdb-client = "^1.45.0.20240915"
+pytest = ">=8.0.2,<9.0.0"
+pytest-testdox = ">=3.1.0,<4.0.0"
+coverage = ">=7.4.4,<8.0.0"
+pylint = ">=3.0.1,<4.0.0"
+pre-commit = ">=4.0.1,<5.0.0"
+black = ">=24.2.0,<25.0.0"
+mypy = ">=1.6.0,<2.0.0"
+isort = ">=5.12.0,<6.0.0"
+colorama = ">=0.4.6,<1.0.0"
+toml = ">=0.10.2,<1.0.0"
+types-PyYAML = ">=6.0.12.12,<7.0.0.0"
+pytest-asyncio = ">=0.21.1,<1.0.0"
+types-requests = ">=2.31.0.8,<3.0.0.0"
+types-Jinja2 = ">=2.11.9,<3.0.0"
+httpx = ">=0.25.0,<1.0.0"
+responses = ">=0.23.3,<1.0.0"
+types-influxdb-client = ">=1.45.0.20240915,<2.0.0.0"
 
 [tool.black]
 line-length = 132
 target-version = [ 'py310', 'py311', 'py312', 'py313' ]
-include = '(src\/scripts\/.*$|\.pyi?$)'
+include = '\.pyi?$'
 exclude = '''
 /(
     \.git
@@ -87,8 +96,67 @@ exclude = '''
 [tool.isort]
 profile = "black"
 line_length = 132
-skip_glob = [ "docs", "notes" ]
+skip_glob = [ "docs", "notes", ".poetry" ]
 
-[build-system]
-requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
-build-backend = "poetry_dynamic_versioning.backend"
+[tool.coverage.paths]
+source = [ "src" ]
+
+[tool.coverage.run]
+branch = true
+source = [ "src/sensortrack" ]
+
+[tool.coverage.report]
+show_missing = false
+precision = 1
+
+[tool.pytest.ini_options]
+asyncio_mode = "strict"
+asyncio_default_fixture_loop_scope = "function"
+filterwarnings = [
+    'error',  # turn all Python warnings into test failures, so they're hard to miss
+    'ignore:"@coroutine" decorator is deprecated since Python 3.8, use "async def" instead',
+    'ignore:datetime.datetime.utcfromtimestamp\(\) is deprecated:DeprecationWarning',
+    "ignore:.*The 'app' shortcut is now deprecated"
+]
+
+[tool.mypy]
+# Settings are mostly equivalent to strict=true as of v1.14.1
+pretty = true
+show_absolute_path = true
+show_column_numbers = true
+show_error_codes = true
+files = [ "src/sensortrack", "tests" ]
+check_untyped_defs = true
+disallow_any_generics = true
+disallow_incomplete_defs = true
+disallow_subclassing_any = true
+disallow_untyped_calls = true
+disallow_untyped_decorators = false
+disallow_untyped_defs = true
+no_implicit_optional = true
+no_implicit_reexport = true
+strict_equality = true
+strict_optional = true
+warn_redundant_casts = true
+warn_return_any = true
+warn_no_return = true
+warn_unused_configs = true
+warn_unused_ignores = true
+
+# It's hard to make tests compliant using unittest.mock
+[[tool.mypy.overrides]]
+module = "tests.*"
+check_untyped_defs = false
+allow_untyped_defs = true
+allow_untyped_calls = true
+disable_error_code = [ "annotation-unchecked" ]
+
+# There is no type hinting for pytest
+[[tool.mypy.overrides]]
+module = "pytest"
+ignore_missing_imports = true
+
+# There is no type hinting for these modules
+[[tool.mypy.overrides]]
+module = [ "influxdb_client", "jsonpath_ng", "pytemperature" ]
+ignore_missing_imports = true
